# SHACLER

./: .env.example  .gitignore  LICENSE  README.md  concatenate_repo.sh  main.py  pyproject.toml  repository_files.txt
docs/: category.md  dataset.md  shapes.md  task.md  task_1_remake.md  test_shape.md  test_shape_2.md
docs/riverbench_schema/: category.md  dataset.md  profile-collection.md  profile.md  task.md
examples/riverbench_schema/: category.md  dataset.md
shacl_doc_generator/: config.py  generator.py  models.py  parser.py
shacl_files/: task_1_remake.ttl  test_shape.ttl  test_shape_2.ttl
test/: test_parser.py
test/fixtures/: simple_shape.ttl
